[project]
name = "innertube"
version = "3.0.0"
description = "Python Client for Google's Private InnerTube API. Works with Youtube, YouTube Music and more!"
authors = [
    { name = "Tom Bulled", email = "26026015+tombulled@users.noreply.github.com" },
    { name = "Artem Khodakov", email = "artem.khodakov.workbox@gmail.com" }
]
license = "MIT"
homepage = "https://pypi.org/project/innertube/"
repository = "https://github.com/tombulled/innertube"
keywords = ["innertube", "youtube", "youtubei", "python", "api", "client"]
readme = "README.md"
dependencies = [
    "httpx>=0.27.2",
    "mediate>=0.1.8",
]
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "fastapi>=0.113.0",
    "flask>=3.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["innertube"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = ["tests"]
filterwarnings = []
asyncio_mode = "auto"
pythonpath = ["."]
